SERVER-17900 Fix compiler warning in decoration_registry.h